name: pgf-binary
version: 0.5

cabal-version: >= 1.10
build-type: Simple
license: BSD3
--license-file: LICENSE
synopsis: Custom version of the binary package for the PGF library
description:
  This is a layer on top of Data.Binary with its own Binary class
  and customised instances for Word, Int and Double.
  The Int and Word instance use a variable-length encoding to save space
  for small numbers, originally implemented by Krasimir Angelov.
  The Double instance uses the standard IEEE754 encoding.
homepage: http://www.grammaticalframework.org/
maintainer: Thomas Hallgren
stability: provisional
category: Data, Parsing
tested-with: GHC==7.4.2, GHC==7.8.3

source-repository head
  type:     git
  location: https://github.com/GrammaticalFramework/pgf-binary.git

Library
  default-language: Haskell2010
  build-depends: base >= 4.3 && <5, binary, data-binary-ieee754,
                 containers, array, bytestring
  exposed-modules: PGF.Data.Binary

  ghc-options: -fwarn-unused-imports -O2
